tests/error/pointer_unknown_arg.gw
// [contains] unknown type
typedef void my_func(unknown_type type);
